# portfolio-optimizer

./: LICENSE  README.md  app_price.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: sample_prices.csv
